--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },"devDependencies": {
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
