--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-backend": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "npx nodemon server/server.js"
   },
   "eslintConfig": {
     "extends": [
